# CosyVoice-ttsfrd

./: .gitattributes  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/cosyvoice_ttsfrd/: __init__.py  post_install.py
src/cosyvoice_ttsfrd/bundled_files/: ttsfrd-0.4.2-cp310-cp310-linux_x86_64.whl  ttsfrd_dependency-0.1-py3-none-any.whl
