[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosyvoice_ttsfrd"
version = "0.4.2"

authors = [
  { name="jiaqi.sjq", email="jiaqi.sjq@alibaba-inc.com" },
  { name="xingchen song", email="sxc19@tsinghua.org.cn" },
]
description = "A wrapper package to install the ttsfrd package for CosyVoice."
readme = "README.md"
# If you have the license in a file, you can use license = { file = "LICENSE.txt" }
# But since we are bundling it, also good to mention it here.
license-files = ["LICENSE"]
requires-python = ">=3.10, <3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/xingchensong/CosyVoice-ttsfrd"

[project.scripts]
cosyvoice-post-install = "cosyvoice_ttsfrd.post_install:main"